<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GRAPPLE CARE</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Grapple_Care">Grapple Care</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="caa">Cannot access your account? ></string>
    <string name="plus">+</string>
    <string name="activetick">   Active Tickets</string>
    <string name="RCC">Resolving Consumer Complaints</string>
    <string name="website">visit us @ www.grappletechnologies.com</string>
    <string name="tfn">Toll Free : 1800 121 1616</string>
    <string name="c">Copyright © 2015 Grapple. All Rights Reserved</string>
    <string name="add">Add</string>
    <string name="newticket">New Ticket</string>
    <string name="nm">Name</string>
    <string name="subject">Subject   : </string>
    <string name="desc">Description  </string>
    <string name="email">Email  </string>
    <string name="space">:</string>
    <string name="sp">Text</string>
    <string name="ser">Services</string>
    <string name="title">Fill your complaints</string>

    <string-array name="options">
    <item>Home</item>
    <item>New Ticket !</item>
    <item>View Ticket !</item>
    <item>About Us</item>

    </string-array>

</resources>
