<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/mg"


    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
  >
    <EditText
        android:id="@+id/editText1"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginStart="35dp"

        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/Username"

        android:textColorHint="#ffffff"
        android:textColor="#e5e4e2"
        android:layout_above="@+id/editText2" />



    <EditText
        android:id="@+id/editText2"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginStart="35dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/Password"
        android:textColorHint="#ffffff"
        android:textColor="#e5e4e2"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="73dp" />

    <Button

        android:id="@+id/button1"
    android:layout_width="120dp"
    android:layout_height="40dp"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="40dp"
    android:text="@string/Login"
    android:clickable="true"
    android:textColor="#e5e4e2"
    android:layout_marginLeft="-40dp"

        android:onClick="onClickl"
    android:background="#348781"

        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />



</RelativeLayout>
