<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#e5e4e2">


    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#ffffff"
        android:id="@+id/imageView4"
        android:layout_marginTop="160dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="125dp"
        android:id="@+id/imageView7"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="#ffffff"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView8"
        android:src="@drawable/add"
        android:layout_marginTop="32dp"
        android:layout_marginStart="22dp"

        android:layout_alignTop="@+id/imageView7"
        android:layout_alignStart="@+id/imageView7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/newticket"
        android:textColor="#4e8975"
        android:textSize="25sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-thin"
        android:id="@+id/textView7"
        android:layout_marginTop="12dp"
        android:layout_marginStart="0dp"
        android:layout_alignTop="@+id/imageView8"
        android:layout_toEndOf="@+id/imageView8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title"
        android:id="@+id/textView10"
        android:textColor="#737e7c"
        android:textSize="25sp"
        android:layout_alignTop="@+id/imageView4"
        android:layout_alignStart="@+id/imageView8"
        android:layout_marginTop="42dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Subject           :  "
        android:id="@+id/textView11"
        android:layout_centerVertical="true"
        android:textColor="#737e7c"
        android:textSize="22sp"
        android:layout_alignStart="@+id/textView10" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:hint="@string/subject"

        android:layout_marginRight="25sp"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/textView7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Product ID      :  "
        android:id="@+id/textView12"
        android:textColor="#737e7c"
        android:textSize="22sp"

        android:layout_below="@+id/editText"
        android:layout_alignStart="@+id/textView11"
        android:layout_marginTop="42dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/productId"
        android:hint="Product ID"
        android:layout_marginRight="25dp"
        android:textColor="#737e7c"
        android:textSize="22sp"
        android:layout_alignBottom="@+id/textView12"
        android:layout_toEndOf="@+id/textView7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"

        android:text="Description    :  "
        android:id="@+id/desc"
        android:textColor="#737e7c"
        android:textSize="22sp"


        android:layout_marginTop="42dp"
        android:layout_below="@+id/productId"
        android:layout_alignStart="@+id/textView12" />



    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="+"
        android:onClick="sendData"
        android:textSize="35sp"
        android:textColor="#ffffff"

        android:background="@drawable/blue"
        android:id="@+id/button2"
        android:layout_alignBottom="@+id/imageView8"
        android:layout_alignEnd="@+id/editText" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignTop="@+id/desc"
        android:layout_alignStart="@+id/productId">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:hint="Description"
            android:id="@+id/editText4"
            android:layout_marginRight="25dp"

            android:layout_alignBottom="@+id/desc"
            android:layout_toEndOf="@+id/textView7" />


        </FrameLayout>

</RelativeLayout>
